--- a/my-local-ocpp-responder/my-local-ws-client.html
+++ b/my-local-ocpp-responder/my-local-ws-client.html
@@ -2,55 +2,46 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>WebSocket Client</title>
-    <style>
-        #status {
-            font-weight: bold;
-            color: green;
-        }
-        #messages {
-            margin-top: 20px;
-        }
-    </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>WebSocket TLS 1.3 Example</title>
 </head>
 <body>
-    <h1>WebSocket Client</h1>
-    <div id="status">Connecting...</div>
-    <div id="messages"></div>
+    <h1>WebSocket TLS 1.3 Connection</h1>
+    <div id="output"></div>
+
     <script>
-        const statusElement = document.getElementById('status');
-        const messagesElement = document.getElementById('messages');
+        const socket = new WebSocket('wss://localhost:8080');
 
-        const ws = new WebSocket('ws://192.168.0.36:8080');
+        socket.addEventListener('open', (event) => {
+            console.log('WebSocket connection established:', event);
+            document.getElementById('output').innerHTML += '<p>Connected to WebSocket server.</p>';
+            socket.send('Hello Server!');
+        });
 
-        ws.onopen = () => {
-            statusElement.textContent = 'Connected to the server';
-            statusElement.style.color = 'green';
-            ws.send('Hello Server!');
-        };
+        socket.addEventListener('message', (event) => {
+            console.log('Message from server:', event.data);
+            document.getElementById('output').innerHTML += `<p>Server: ${event.data}</p>`;
+        });
 
-        ws.onmessage = (event) => {
-            const message = document.createElement('div');
-            message.textContent = `Message from server: ${event.data}`;
-            messagesElement.appendChild(message);
-
-            if (event.data === 'You are being disconnected by the server.') {
-                alert('Server: You are being disconnected.');
-            } else if (event.data === 'Server is shutting down.') {
-                alert('Server: The server is shutting down.');
+        socket.addEventListener('error', (event) => {
+            console.error('WebSocket error:', event);
+            document.getElementById('output').innerHTML += '<p>Error connecting to WebSocket server.</p>';
+            // Log additional error details
+            if (event && event.message) {
+                console.error('Error details:', event.message);
+                document.getElementById('output').innerHTML += `<p>Error details: ${event.message}</p>`;
             }
-        };
+        });
 
-        ws.onclose = () => {
-            statusElement.textContent = 'Disconnected from the server';
-            statusElement.style.color = 'red';
-        };
-
-        ws.onerror = (error) => {
-            statusElement.textContent = 'Error connecting to the server';
-            statusElement.style.color = 'red';
-            console.error('WebSocket error:', error);
-        };
+        socket.addEventListener('close', (event) => {
+            console.log('WebSocket connection closed:', event);
+            document.getElementById('output').innerHTML += '<p>WebSocket connection closed.</p>';
+            // Log close details
+            if (event.code === 1006) {
+                console.error('Abnormal closure. Check server and network configuration.');
+                document.getElementById('output').innerHTML += '<p>Abnormal closure. Check server and network configuration.</p>';
+            }
+        });
     </script>
 </body>
 </html>
